# lfsr-tools

./: README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: python-package.yml
tests/: test_berlekamp_massey.py  test_lfsr.py
tools/: __init__.py
